--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Fur Squad Tracker</h1>
+  <h1 id="headline">Fur Squad Tracker</h1>
   <p class="subheadline" id="subheadline">Every tap = one more furry friend spotted!<br>Think you can catch them all?</p>
   <div class="start-wrap" id="start-wrap">
     <button type="button" class="btn-start" id="start">Start</button>
@@ -23,10 +23,10 @@
       <img src="assets/dog2.png" alt="Pixel art dog" class="header-image-placeholder" id="header-dog2" hidden>
       <img src="assets/cute-kawaii.png" alt="Cute kawaii cat" class="header-image-placeholder" id="header-cute-cat" hidden>
       <img src="assets/annoying-dog.png" alt="Annoying dog" class="header-image-placeholder" id="header-annoying-dog" hidden>
-      <img src="assets/nyan-cat.png" alt="Nyan cat" class="header-image-placeholder" id="header-nyan-cat" hidden>
+      <img src="assets/black-cat.png" alt="Black cat" class="header-image-placeholder" id="header-black-cat" hidden>
       <img src="assets/plant.png" alt="Celebration" class="header-image-placeholder" id="header-plant" hidden>
-      <img src="assets/catnap.png" alt="Catnap" class="header-image-placeholder" id="header-catnap" hidden>
-      <img src="assets/cat-mad.png" alt="Try again" class="header-image-placeholder" id="header-cat-mad" hidden>
+      <img src="assets/nyan-cat.png" alt="Nyan cat" class="header-image-placeholder" id="header-catnap" hidden>
+      <img src="assets/cat-balloon.png" alt="Try again" class="header-image-placeholder" id="header-cat-mad" hidden>
       <video class="header-image-placeholder header-video" id="header-video" muted loop playsinline aria-hidden="true" hidden>
         <source src="assets/bravo-animation.mp4" type="video/mp4">
       </video>
