--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
   </div>
   <div class="reset-wrap" id="reset-wrap" hidden>
-    <button class="btn-reset" id="reset">Reset</button>
+    <button class="btn-reset" id="reset" aria-label="Play again">Play again</button>
   </div>
 
   <script src="script.js"></script>
