changing layout of start screen

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <h1 id="headline">Fur Squad Tracker</h1>
   <p class="subheadline" id="subheadline">Every tap = one more furry friend spotted!<br>Think you can catch them all?</p>
+  <div class="top-bar-slot" id="top-bar-slot" hidden></div>
   <div class="game-slot" id="game-slot">
     <div class="game-slot-pre" id="game-slot-pre">
       <div class="start-wrap" id="start-wrap">
