adjustment failure screen

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
   <h1 id="headline">Fur Squad Tracker</h1>
   <p class="subheadline" id="subheadline">Every tap = one more furry friend spotted!<br>Think you can catch them all?</p>
+  <p class="all-done-message subheadline-end" id="all-done-message" aria-live="polite" hidden>Bloom-tastic! Now you can spin like a sunflower!</p>
+  <p class="failure-message subheadline-end" id="failure-message" aria-live="polite" hidden>Catnap over… try again! Time to claw at success</p>
   <div class="top-bar-slot" id="top-bar-slot" hidden></div>
   <div class="game-slot" id="game-slot">
     <div class="game-slot-pre" id="game-slot-pre">
@@ -21,8 +23,6 @@
       <div class="countdown-overlay" id="countdown-overlay" aria-live="polite" hidden></div>
     </div>
     <div class="game-slot-play" id="game-slot-play" hidden>
-    <p class="all-done-message end-screen-message" id="all-done-message" aria-live="polite" hidden>Bloom-tastic! Now you can spin like a sunflower!</p>
-    <p class="failure-message end-screen-message" id="failure-message" aria-live="polite" hidden>Catnap over… try again! Time to claw at success</p>
     <div class="header-image-slot">
       <img src="assets/cat.png" alt="Pixel art cat" class="header-image-placeholder" id="header-cat">
       <img src="assets/dog.png" alt="Pixel art dog" class="header-image-placeholder" id="header-dog" hidden>
